--- a/sumfinn.vcxproj.filters
+++ b/sumfinn.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="sumfinn.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Mal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Mal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
