--- a/sumfinn.vcxproj
+++ b/sumfinn.vcxproj
@@ -147,6 +147,9 @@
   <ItemGroup>
     <ClInclude Include="Mal.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="TextFile1.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
